2009-01-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10182: htmlArea RTE: Add support for editing lang attribute
	* Fixed bug #9904: htmlArea RTE: RTE.default.buttons.table.properties.borderStyle.removeItems is not honored
	* Fixed bug #9905: htmlArea RTE: Table properties: Removing headers leaves an empty fieldset

2009-01-24  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10205: DB session record is only created when user is authenticated (thanks also to Michael Stucki)

2008-01-24  Martin Kutschker  <masi@typo3.org>

	* Added feature #10092: logging API for deprecated functions
	* Added feature #10100: logging API for deprecated TypoScript objects and properties
	* Fixed bug #10098: t3lib_div::fixed_lgd_cs calls deprecated t3lib_div::fixed_lgd

2009-01-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10234: when "create new record" in list module, page (after) is last entry
	* Fixed bug #10179: sys_action menu doesn't respect hidden and returns empty ul if there are no entries

2009-01-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #10231: split() is deprecated in PHP 5.3 (patch by Karsten Dambekalns)

2009-01-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9345: CSV export includes _CLIPBOARD_ in header row (thanks to Christian Kuhn)
	* Added feature #10220: Get some unit tests for the core (thanks to Oliver Klee)

2009-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #10195: htmlArea RTE: Update RTE about info
	* Added feature #10219: htmlArea RTE: Clean up unused localization files
	* Fixed bug #9785: htmlArea RTE: Disabling images in RTE still leaves the toolbar button
	* Fixed bug #9965: htmlArea RTE: IE jumps down to last RTE input

2009-01-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10206: htmlArea RTE: Allow to hide any button

2009-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9774: Incorrect validation of allowed classes in RTE transformation
