@@ -1,3 +1,7 @@
+2009-01-23  Steffen Kamper  <info@sk-typo3.de> 
+
+	Fixed bug  #10178: Toolbar menu fails if there are no menu items
+
 2009-01-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #10182: htmlArea RTE: Add support for editing lang attribute
